# fast_sql_manager

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tasks.py
easy_sql/: pyproject.toml
easy_sql/tests/: test_easy_sql.py
fast_orm/: entity.py  repository.py
fast_sql_manager/: __init__.py  repository.py  test_mongo.py  test_mysql.py  test_select.py  test_sqlite.py
fast_sql_manager/abstractions/: _mongo.py  _mysql.py  _sqlite.py  mongo.py  mysql.py  postgres.py  repository.py  sqlite_repository.py
fast_sql_manager/implementations/: mongo.py  mysql copy.py  mysql.py  postgres.py  sqlite.py
fast_sql_manager/interfaces/: db_config_interface.py
tests/: test_select.py
