[tool.poetry]
name = "easy_sql"
version = "0.1.0"
description = ""
authors = ["OscarSilvaOfficial <oscarkaka222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
sh='^1.11'
certifi='^2020.12.5'
mysql='^0.0.2'
mysql-connector-python='^8.0.22'
mysqlclient='^2.0.3'
protobuf='^3.14.0'
six='^1.15.0'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
