[tool.poetry]
name = "fast_sql_manager"
version = "1.2.4"
description = "Um pacote simples para realizar operações no banco"
authors = ["OscarSilvaOfficial <oscarkaka222@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.0.27"
pymongo = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
